--- a/src/app/map/truck/truck.component.css
+++ b/src/app/map/truck/truck.component.css
@@ -3,18 +3,22 @@
 }
 
 .truck {
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
-  border: 2px solid #000;
+  position: absolute;
+  top: 0;
+  left: 0;
+  transform: translate(-50%, -50%);
+  width: 20px;
+  height: 20px;
+  border-radius: 100%;
+  border: 1px solid #000;
 }
 
 .truck-info {
   position: absolute;
-  top: 50px;
+  top: 20px;
   left: 50%;
   transform: translateX(-50%);
-  background-color: rgba(0, 0, 0, 0.9);
+  background-color: #505050;
   color: #fff;
   padding: 8px 12px;
   border-radius: 4px;
