--- a/src/app/map/truck/truck.component.css
+++ b/src/app/map/truck/truck.component.css
@@ -10,7 +10,8 @@
   width: 20px;
   height: 20px;
   border-radius: 100%;
-  border: 1px solid #000;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.3);
+  border: 1px solid #505050;
 }
 
 .truck-info {
@@ -26,6 +27,7 @@
   white-space: nowrap;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.3);
   display: block;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .truck-info div {
